Replace contact form by contact info

--- a/_includes/formcarry.html
+++ b/_includes/formcarry.html
@@ -1,3 +1,12 @@
+
+<form >
+  Lea Delescluse
+  Artiste en peinture décorative
+  delescluse.l@gmail.com
+  Montpellier, France
+</form>
+
+<!--
 <form id="form" class="form" action="{{ site.formcarry }}" method="POST">
   <div class="form__subcontainer">
     <div>
@@ -28,3 +37,4 @@
 
   <p class="form__message"></p>
 </form>
+-->
