small adjustment to contact and general things

--- a/_assets/scss/components/_form.scss
+++ b/_assets/scss/components/_form.scss
@@ -1,11 +1,12 @@
 //----------------------------------------------
 // Form
-//---------------------------------------------- 
+//----------------------------------------------
 .form {
   width: 100%;
   display: flex;
   justify-content: center;
   flex-direction: column;
+  text-align: center;
 
   input,
   textarea {
