--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -17,11 +17,19 @@
         <hr class="sep"/>
       </div>
 
+      <!--
       <div class="contact__form section-padding--half">
         <div class="grid-xlarge">
           {% include formcarry.html %}
         </div>
       </div>
+      -->
+
+      <div class="contact__mast section-padding--half">
+        {% include contactinfo.html %}
+      </div>
+
     </div>
+
   </div>
 </section>
