--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,15 @@
 <!-- The footer at the very bottom of the screen -->
 <footer class="footer section-padding">
   <div class="grid">
+
     <div class="subscribe" id="subscribe">
+
       <div class="subscribe__container">
-        <span class="subscribe__title">Subscribe</span>
+        <span class="subscribe__title">Contact</span>
+
         <p class="subscribe__text">Get a weekly email of posts I’ve added to the site.</p>
         {% include subscribe-form.html %}
+
       </div>
     </div>
 
