update posts, icon and a lot of stuffs

--- a/_assets/scss/components/_post.scss
+++ b/_assets/scss/components/_post.scss
@@ -1,6 +1,6 @@
 //----------------------------------------------
 // Post
-//---------------------------------------------- 
+//----------------------------------------------
 .post {
 
   // .amp-template & {
@@ -115,7 +115,7 @@
 
 //----------------------------------------------
 // Jekyll
-//---------------------------------------------- 
+//----------------------------------------------
 #markdown {
   display: flex;
   flex-direction: column;
@@ -234,6 +234,11 @@
 
   img[src$="#full"] {
     width: 100vw;
+    max-width: none;
+  }
+
+  img[src$="#half"] {
+    width: 50vw;
     max-width: none;
   }
 
