--- a/_assets/scss/base/_media.scss
+++ b/_assets/scss/base/_media.scss
@@ -23,7 +23,7 @@ iframe {
 
 //----------------------------------------------
 // Absolute Background
-//---------------------------------------------- 
+//----------------------------------------------
 .absolute-bg {
   position: absolute;
   top: 0;
@@ -39,6 +39,11 @@ iframe {
   overflow: hidden;
 }
 
+&_small {
+  height: 50%;
+  width: 50%;
+}
+
 //----------------------------------------------
 // Flex Vid
 //----------------------------------------------
@@ -49,7 +54,7 @@ iframe {
 
   &:before {
     content: "";
-    
+
     display: block;
     padding-bottom: 56.5%; // Widescreen
   }
@@ -65,4 +70,19 @@ iframe {
     height: 100%;
     width: 100%;
   }
+}
+
+// ----------------------------------------------
+// Flex row/column grid
+// ----------------------------------------------
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-gap: 1em;
+}
+
+img {
+  width: 100%;
+  height: auto;
 }
