try to integrate button in header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,9 @@
 <header class="header">
   <!-- <a class="header__title" href="{{ '/' | absolute_url }}">{{ site.title }}</a> -->
-  <a class="header__title" href="{{ site.url }}/assets/pdf/cv.pdf">{{ site.title }}</a>
+  <a class="header__title"
+    <a class="button_c" href="{{ site.url }}/assets/pdf/cv.pdf" target="_blank" rel="nofollow noopener">
+      {{ site.title }}
+    </a>
+  </a>
   {% include navigation.html %}
 </header>
