--- a/_assets/scss/regions/_header.scss
+++ b/_assets/scss/regions/_header.scss
@@ -33,6 +33,7 @@
   &__title {
     @extend %font-header;
 
+    transition: color .5s ease-in-out;
     font-size: $font-xsmall;
     color: $color-black;
   }
