--- a/_assets/scss/regions/_header.scss
+++ b/_assets/scss/regions/_header.scss
@@ -62,6 +62,10 @@
       a {
         color: $color-black;
       }
+      
+      a:hover {
+        color: rgba($color-black,0.5);
+      }
     }
   }
 }
