--- a/_assets/scss/regions/_header.scss
+++ b/_assets/scss/regions/_header.scss
@@ -38,7 +38,7 @@
     color: rgba($color-black,0.5);
   }
 
-  &__title:hover {
+  &:hover {
     color: rgba($color-black,0.5);
     transform:scale(1.025,1.025);
   }
