--- a/_assets/scss/regions/_header.scss
+++ b/_assets/scss/regions/_header.scss
@@ -22,7 +22,7 @@
     left: 1em;
   }
 
-  background-color: $color-white;
+  background-color: $color-lightgrey;
   border-bottom: $border;
 
   @media (min-width: $mq-small) {
