--- a/_assets/scss/regions/_header.scss
+++ b/_assets/scss/regions/_header.scss
@@ -5,8 +5,6 @@
   @extend %letter-spacing;
   @extend %box-shadow;
 
-  transition: opacity,transform .5s ease-in-out;
-  
   position: fixed;
   top: 0;
   left: 0;
@@ -34,12 +32,15 @@
 
   &__title {
     @extend %font-header;
-    @extend %transition;
 
     font-size: $font-xsmall;
     color: $color-black;
-    
-    &:hover {
+
+    a {
+      transition: opacity,transform .5s ease-in-out;
+    }
+
+    a:hover {
       opacity: 0.5;
       transform: scale(1.025,1.025);
     }
@@ -66,7 +67,7 @@
         transition: opacity .5s ease-in-out;
         color: $color-black;
       }
-      
+
       a:hover {
         opacity: 0.5;
       }
