--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,7 @@
 <nav>
   <ul class="header__list">
     <li><a href="{{ '/' | prepend: site.baseurl }}">Projets</a></li>
-    <!-- <li><a href="{{ '/style-guide' | prepend: site.baseurl }}">Style Guide</a></li> -->
+    <li><a href="{{ site.url }}/assets/PDF/cv.pdf" target="_blank">CV</a></li>
     <li><span class="popup__open">Contact</span></li>
   </ul>
 </nav>
