--- a/_includes/post-card.html
+++ b/_includes/post-card.html
@@ -5,11 +5,8 @@
         <img src="{{ post.image }}" alt="{{ post.title }}" data-aos="fade-in" itemprop="image"/>
       </figure>
     {% endif %}
-    <!--
-    Remove any extra typo in post-cards
     <div>
-      <h2 class="posts__text"><strong itemprop="name">{{ post.title }}</strong> — <span itemprop="description">{{ post.content | strip_html | truncatewords: 35, "" }}</span></h2>
+      <h2 class="posts__text"><strong itemprop="name">{{ post.title }}</strong> — <span itemprop="description">{{ post.description | strip_html | truncatewords: 35, "" }}</span></h2>
     </div>
-    -->
   </a>
 </article>
